<resources>
    <string name="app_name">Password manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello Alain!!</string>
    <string name="site">Site</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="masterPassword">Master Password</string>
    <string name="enter">Enter</string>
    <string name="wrongPassword">Wrong password</string>
    <string name="wrong_master_password">Master Passwords are different</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="fileloadfailed">Internal file load failed.</string>
    <string name="filewritefailed">Internal file write failed.</string>
    <string name="init_password">Initialize your Master Password</string>
    <string name="change_password">Change your Master Password</string>
    <string name="current_password">Current Master Password</string>
    <string name="new_password">New Master Password</string>
    <string name="retype_password">Re-type New Master Password</string>
    <string name="change">Change</string>
    <string name="initialize">Initialize</string>
    <string name="initialize_success">Master Password initialized</string>
    <string name="initialize_failed">Master Password failed</string>
    <string name="initialize_cancelled">Master Password cancelled</string>
    <string name="action_backup">Backup</string>
    <string name="backup_successful">Backup successful</string>
    <string name="backup_failed">Backup failed</string>
</resources>
